--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-
-
 .platform {
     background-color: #ECEAEA;
     padding-top: 80px;
@@ -59,6 +50,11 @@
     padding-bottom: 26px;
     padding-top: 99px;
     overflow: hidden;
+    height: 100%;
+}
+.swiper-slide{
+    height: 100%;
+    
 }
 
 .platformPaginationBox {
@@ -84,6 +80,7 @@
     color: #6D6969;
     text-wrap: nowrap;
     border-radius: 50px;
+    cursor: pointer;
 }
 
 .platformPaginationBtnActive {
@@ -105,6 +102,9 @@
     position: relative;
     z-index: 20;
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .platformBottomText {
@@ -166,6 +166,7 @@
     border: 1px solid #6D6969;
     position: absolute;
     z-index: 20;
+    cursor: pointer;
 }
 
 .platformSwoperBtnLeft {
@@ -269,7 +270,7 @@
     }
 
     .platformBottomTitle {
-        font-size: 64px;
+        font-size: 54px;
         line-height: 62px;
     }
 
@@ -301,6 +302,7 @@
         position: absolute;
         z-index: 20;
         margin-top: -28px;
+        cursor: pointer;
     }
 
     .platformSwoperBtnLeftMobile {
@@ -336,13 +338,14 @@
 
 @media(max-width: 378px) {
     .platformBottomTitle {
-        font-size: 48px;
+        font-size: 38px;
         line-height: 48px;
     }
 
     .platformBottomText {
         font-size: 14px;
         line-height: 16px;
+        margin-bottom: 100px;
     }
 }
 
@@ -429,6 +432,7 @@
     border: 1px solid #6D6969;
     position: absolute;
     z-index: 20;
+    cursor: pointer;
 }
 
 .eventSwiperBtnLeft {
