--- a/css/main2.css
+++ b/css/main2.css
@@ -217,7 +217,7 @@
 }
 
 .rebrain-container {
-    max-width: 1440px;
+    max-width: 1620px;
     margin-left: auto;
     margin-right: auto;
     padding-right: 20px;
@@ -227,12 +227,12 @@
 .rebrain-box {
     display: flex;
     gap: 20px;
-
+    position: relative;
 }
+
 
 .rebrain-row {
     padding: 72px 0 233px 0;
-    max-width: 1100px;
     height: 404px;
     background-color: #F8F7F7;
     background-image: url(../img/rebrain/logo_rebrain.svg);
@@ -253,7 +253,6 @@
     text-decoration-skip-ink: none;
     color: #363636;
     margin-left: 300px;
-
     position: absolute;
     left: 0;
     top: -70px;
@@ -697,6 +696,13 @@
     padding-top: 80px;
     padding-bottom: 30px;
     background-color: #2B2B2B;
+    position: relative;
+}
+.fevlakelogoFooter{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
 }
 
 .footer-container {
@@ -705,6 +711,8 @@
     margin-right: auto;
     padding-left: 20px;
     padding-right: 20px;
+    position: relative;
+    z-index: 20;
 }
 
 .footer-row {
@@ -722,7 +730,6 @@
     flex-direction: column;
     list-style: none;
 }
-
 
 
 .footer-list-2 {
@@ -758,15 +765,8 @@
 
 }
 
-
 .footer-row-2 {
     padding-top: 30px;
-    background-image: url(../img/footer/fevlake.svg);
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: bottom;
-
-
 }
 
 .footer-appeal {
