--- a/css/style.css
+++ b/css/style.css
@@ -764,3 +764,16 @@
         grid-row-gap: 10px;
     }
 }
+.hoverMain{
+    opacity: 1;
+    transition: all 0.3;
+}
+.hoverMain:hover{
+    opacity: 0.7;
+}
+.hamburger_top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 80px;
+}
