--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,8 @@ html {
     transition: all .3s;
     z-index: 20;
 }
-.hamburgerBarContainer{
+
+.hamburgerBarContainer {
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
@@ -939,7 +940,8 @@ html {
 .komanda-proekt-span {
     color: #D84F54;
 }
-.komanda-profesi{
+
+.komanda-profesi {
     display: none;
 }
 
@@ -1974,7 +1976,8 @@ html {
         width: 100%;
         max-width: 1024px;
     }
-    .rebrain-col-img-link{
+
+    .rebrain-col-img-link {
         width: 100%;
         display: grid;
         grid-template-columns: 1fr;
@@ -2120,6 +2123,43 @@ html {
     margin-right: 5%;
 }
 
+
+.swiper-pagination-bullet {
+    padding: 10px 30px !important;
+    background-color: #0000001A !important;
+    backdrop-filter: blur(40px) !important;
+    border: none !important;
+    font-family: PP Object Sans !important;
+    font-size: 16px !important;
+    font-weight: 800 !important;
+    line-height: 19.2px !important;
+    color: #6D6969 !important;
+    text-wrap: nowrap !important;
+    border-radius: 50px !important;
+    cursor: pointer !important;
+    height: auto !important;
+    width: auto !important;
+    margin: 0 !important;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #F3585B4D !important;
+    color: #D84F54 !important;
+}
+.swiper-pagination{
+    position: relative !important;
+    z-index: 20;
+    margin-bottom: -10px;
+    padding-top: 10px;
+    gap: 20px !important;
+    display: flex;
+    justify-content: center;
+}
+.swiper-slide {
+    border-radius: 14px !important;
+}
+
+
 .platformBottomTitle {
     font-family: PP Object Sans;
     font-size: 104px;
@@ -2245,6 +2285,15 @@ html {
     .platform_bottom {
         padding-left: 20px;
         padding-right: 20px;
+    }
+}
+
+@media(max-wdith: 920px){
+    .swiper-pagination{
+        justify-content: end !important;
+    }
+    .platformPaginationBox{
+        justify-content: start;
     }
 }
 
@@ -2538,7 +2587,8 @@ html {
     .eventSwiperBtn {
         display: none !important;
     }
-    .events{
+
+    .events {
         padding-bottom: 80px;
     }
 }
@@ -3449,7 +3499,7 @@ html {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-bottom: -20px;
+    margin-bottom: -30px;
     position: relative;
     z-index: 20;
 }
@@ -5384,28 +5434,26 @@ html {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 999;
     display: none;
 }
 
 .modalContainer {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
     display: flex;
-    align-items: center;
     justify-content: center;
     overflow-y: scroll;
-    max-height: 100vh;
-    padding-top: 200px;
+    padding-top: 50px;
     padding-bottom: 50px;
-    max-height: 100vh;
+    overflow-y: scroll;
 }
 
 .modalCloseBg {
     width: 100%;
-    height: 100ch;
+    height: 120%;
     background-color: #000000CC;
     position: absolute;
     top: 0;
@@ -5413,6 +5461,8 @@ html {
 }
 
 .modalBox {
+    margin-top: auto;
+    margin-bottom: auto;
     background-color: #F8F7F7;
     border: 1px solid #ECEAEA;
     max-width: 720px;
@@ -5553,6 +5603,17 @@ html {
     .modalBox {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .modalTitle {
+        font-size: 26px;
+        line-height: 31.2px;
+    }
+}
+
+@media(max-width: 378px) {
+    .modalBox {
+        padding: 30px 10px 10px 10px;
     }
 }
 
@@ -5821,42 +5882,49 @@ html {
     color: #F3585B;
 }
 
-.show{
+.show {
     max-height: 3099px;
 }
 
-.mb-0{
+.mb-0 {
     margin-bottom: 0;
     transition: all .3s;
 }
 
 
-@media(max-width: 1240px){
-    .workCenter{
+@media(max-width: 1240px) {
+    .workCenter {
         gap: 16px;
     }
-    .workRight{
+
+    .workRight {
         max-width: 654px;
     }
-    .workRightWhite{
+
+    .workRightWhite {
         padding: 40px 0px 20px 40px;
     }
-    .workRightTitle{
+
+    .workRightTitle {
         margin-right: 50px;
     }
-    .workDropdown{
+
+    .workDropdown {
         padding-right: 50px;
     }
-    .workBtns{
+
+    .workBtns {
         margin-right: 40px;
     }
 }
-@media(max-width: 1024px){
-    .workCenter{
+
+@media(max-width: 1024px) {
+    .workCenter {
         flex-direction: column;
         gap: 0;
     }
-    .workLeft{
+
+    .workLeft {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         gap: 20px;
@@ -5866,13 +5934,16 @@ html {
         overflow-x: scroll;
         padding-bottom: 0;
     }
-    .workRight{
+
+    .workRight {
         padding-top: 30px;
     }
-    .workArrow{
+
+    .workArrow {
         display: none;
     }
-    .workLeftTitle:nth-child(1){
+
+    .workLeftTitle:nth-child(1) {
         position: static;
         font-size: 26px;
         line-height: 31.2px;
@@ -5880,41 +5951,51 @@ html {
         top: 0;
         left: 0;
     }
-    .workLeftTitle{
+
+    .workLeftTitle {
         width: 487px;
         font-size: 26px;
         line-height: 31.2px;
     }
+
     .workLeft::-webkit-scrollbar {
-        display: none; /* Chrome, Safari, Edge uchun */
+        display: none;
+        /* Chrome, Safari, Edge uchun */
     }
-    .workRight{
+
+    .workRight {
         margin-left: auto;
         max-width: 650px;
         width: 100%;
     }
-    .workRightListNumber{
+
+    .workRightListNumber {
         text-wrap: nowrap;
     }
 }
 
-@media(max-width: 520px){
-    .workRightWhite{
+@media(max-width: 520px) {
+    .workRightWhite {
         padding: 40px 0px 20px 10px;
     }
-    .workRightList{
+
+    .workRightList {
         padding-bottom: 50px;
     }
-    .workDropdownBtn{
+
+    .workDropdownBtn {
         margin-bottom: 16px;
     }
-    .workDropdown{
+
+    .workDropdown {
         padding-right: 10px;
     }
-    .workDropdownTitle{
+
+    .workDropdownTitle {
         font-size: 16px;
     }
-    .workDropdownList{
+
+    .workDropdownList {
         padding: 0;
         margin-top: 10px;
     }
@@ -6185,14 +6266,7 @@ html {
     .years {
         margin-right: auto;
     }
-    .modalTitle{
-        font-size: 26px;
-        line-height: 31.2px;
-    }
-    .modalBox{
-        margin-left: 20px;
-        margin-right: 20px;
-    }
+
 }
 
 /* footer end */
