--- a/css/main.css
+++ b/css/main.css
@@ -2740,6 +2740,7 @@ html {
     background-size: cover;
     background-position: center;
     text-decoration: none;
+    background-color: #F8F7F7;
 }
 
 .bottomCardText {
