--- a/css/main.css
+++ b/css/main.css
@@ -2974,6 +2974,8 @@ html {
     font-weight: 500;
     color: #F8F7F7;
     line-height: 28px;
+    max-width: 439px;
+    width: 100%;
 }
 
 .span1 {
@@ -3134,10 +3136,11 @@ html {
     line-height: 62.72px;
     text-align: left;
     margin-bottom: 30px;
+    color: #363636;
 }
 
 .Fevlake-text {
-    font-family: PP Object Sans, sans-serif;
+    font-family: "pp-500", sans-serif;
     font-size: 22px;
     font-weight: 500;
     line-height: 28.6px;
@@ -3147,7 +3150,7 @@ html {
 }
 
 .Fevlake-text-info {
-    font-family: PP Object Sans, sans-serif;
+    font-family: "pp-500", sans-serif;
     font-size: 22px;
     font-weight: 500;
     line-height: 28.6px;
@@ -3164,7 +3167,7 @@ html {
 }
 
 .Fevlake-link-text {
-    font-family: PP Object Sans, sans-serif;
+    font-family: "fontNormal", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20.8px;
@@ -3173,7 +3176,7 @@ html {
 }
 
 .Fevlake-link-info {
-    font-family: PP Object Sans, sans-serif;
+    font-family: "fontNormal", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 20.8px;
@@ -3736,6 +3739,7 @@ html {
     margin-bottom: 50px;
     position: relative;
     z-index: 30;
+    flex-wrap: wrap;
 }
 
 
@@ -3835,6 +3839,10 @@ html {
 
 .trustLogoBox {
     max-width: 180px;
+    color: #6D6969;
+}
+.trustLogoBoxActive{
+    color: #D84F54;
 }
 
 .trustLogo {
