--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,8 @@ html {
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .header-top {
@@ -182,8 +182,8 @@ html {
     left: -100%;
     height: 100vh;
     background-color: transparent;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     transition: all .3s;
     z-index: 20;
 }
@@ -192,8 +192,6 @@ html {
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
 }
 
 .hamburger-logo {
@@ -397,8 +395,8 @@ html {
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .portfolio-title {
@@ -513,8 +511,8 @@ html {
     max-width: 1440px;
     margin-right: auto;
     margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
     align-items: center;
 }
 
@@ -824,8 +822,8 @@ html {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     align-items: center;
 }
 
@@ -1476,8 +1474,8 @@ html {
 
 .data-container {
     max-width: 1440px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -2039,8 +2037,8 @@ html {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .platormTopText {
@@ -2071,8 +2069,8 @@ html {
 .platformBottomContent {
     background-color: #F8F7F7;
     border-radius: 14px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -2625,8 +2623,8 @@ html {
 
 .blogContainer {
     max-width: 1320px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -2899,8 +2897,8 @@ html {
     max-width: 1480px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     width: 100%;
 
 }
@@ -2953,8 +2951,8 @@ html {
     font-family: "Poppins", sans-serif;
     padding-top: 8px;
     padding-bottom: 8px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-size: 16px;
     font-weight: 400;
     border-radius: 50px;
@@ -3101,8 +3099,8 @@ html {
     max-width: 1480px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .Fevlake-container-2 {
@@ -3350,8 +3348,8 @@ html {
 
 .probleConatiner {
     max-width: 1480px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -3703,8 +3701,8 @@ html {
 .trustContainer {
     max-width: 1340px;
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -3953,8 +3951,8 @@ html {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .formatTitle {
@@ -4075,8 +4073,8 @@ html {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .industryTitle {
@@ -4280,8 +4278,8 @@ html {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .infoTop {
@@ -4789,7 +4787,7 @@ html {
     }
 
     .projectBottomCenterText2 {
-        font-size: 12px;
+        font-size: 16px;
         line-height: 20px;
     }
 
@@ -4817,8 +4815,8 @@ html {
     max-width: 1480px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     position: relative;
 }
 
@@ -5117,8 +5115,8 @@ html {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .supportTitle {
@@ -5326,8 +5324,8 @@ html {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .contactTitle {
@@ -5421,7 +5419,7 @@ html {
 
 @media(max-width: 500px) {
     .support {
-        padding-bottom: 150px;
+        padding-bottom: 80px;
         padding-top: 50px;
     }
 
@@ -5432,10 +5430,17 @@ html {
 
     .contactRow {
         grid-template-columns: 1fr;
-        gap: 30px;
+        gap: 10px;
         max-width: 320px;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+@media(max-width: 378px){
+    .contactTitle{
+        font-size: 26px;
+        line-height: 31.2px;
+        margin-bottom: 24px;
     }
 }
 
@@ -5809,6 +5814,7 @@ html {
     position: relative;
     width: 100%;
     padding-right: 80px;
+    overflow: hidden;
 }
 
 
@@ -6095,8 +6101,8 @@ html {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     position: relative;
     z-index: 20;
 }
