--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@
         flex-direction: column;
         gap: 50px;
         top: 271px;
+        max-width: 60%;
     }
 
     .komanda-cards-card:last-child {
@@ -227,7 +228,7 @@
     }
 
     .komanda-text {
-        margin-top: 60px;
+        margin-top: 0px;
         font-family: 'pp-500', sans-serif;
         font-size: 12px;
         font-weight: 500;
